# cs2man

./: Cargo.toml  README.md  crosshair_profiles.json
src/: main.rs  mainLinux.rs
