[package]
name = "cs2man"
version = "0.1.0"
edition = "2021"
authors = ["Absacker"]
description = "A GUI tool to manage CS2 configurations between Steam accounts"

[dependencies]
num-bigint = "0.4"
num-traits = "0.2"
eframe = "0.28"
egui = "0.28"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "processthreadsapi", "handleapi"] }

[[bin]]
name = "cs2man"
path = "src/main.rs"

# Windows-specific build settings for better UX
[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

# Release optimizations
[profile.release]
lto = true
codegen-units = 1
panic = "abort"